--- a/roles/zabbix-server/handlers/main.yml
+++ b/roles/zabbix-server/handlers/main.yml
@@ -1,5 +1,5 @@
 - name: restart zabbix-server
-  service: name=zabbix-server state=restarted enabled=yes
+  service: name=zabbix-server state=restarted enabled=yes sleep=30
 
 - name: restart mysqld
   service: name=mysqld state=restarted enabled=yes
